fix margin and alignment in task 4

--- a/web_static/Styles/4-common.css
+++ b/web_static/Styles/4-common.css
@@ -8,6 +8,7 @@ body {
 
 .container {
     max-width: 1000px;
-    margin: 30px 0px;
-    align-content: center;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
